# pink-trombone

./: Cargo.toml  LICENSE  README.md
examples/: pink-trombone.rs
src/: glottis.rs  lib.rs  math.rs  noise.rs  noise_gen.rs  rng.rs  tract.rs  tract_shaper.rs  transient.rs  trombone.rs  turbulence.rs
