[package]
name = "pink-trombone"
version = "0.1.0"
edition = "2018"
readme = "README.md"
authors = ["Neil Thapen", "Victor Nova <lostfreeman@gmail.com>"]
description = "Vocal cords simulator"
keywords = ["voice"]
categories = ["audio"]
license = "MIT"
repository = "https://github.com/lostmsu/pink-trombone"

[dependencies]
rand = "0.8.4"

[dev-dependencies]
rodio = "0.14.0"
